# django-saas-template

./: .dockerignore  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile.test  Justfile  LICENSE  Makefile  Procfile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
docker/: start-celery-beat  start-celery-flower  start-celery-worker  start-django  start-gunicorn
etc/alertmanager/: alertmanager.yml
etc/caddy/: Caddyfile
etc/certs/: foo.test-key.pem  foo.test.pem
etc/grafana/: Dockerfile
etc/grafana/config/: dashboards.yml  postgres.yml
etc/grafana/dashboards/: celery-monitoring.json  django-overview.json  django-requests-by-view.json  django-requests-overview.json
etc/nginx/: Dockerfile
etc/postgres/: Dockerfile
etc/prometheus/: prometheus-alerts-celery.yaml  prometheus-alerts.yaml  prometheus.yml
etc/traefik/: Dockerfile  traefik.yml
frontend/: Dockerfile  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
server/: Dockerfile  Dockerfile.prod  Dockerfile.test  entrypoint.prod.sh  entrypoint.sh  entrypoint.test.sh
server/apps/chat/: consumers.py  urls.py  views.py
server/apps/core/: admin.py  context_processors.py  models.py  signals.py  tasks.py  urls.py  views.py
server/apps/users/: admin.py  allauth.py  features.py  (+2 more)
server/config/: __init__.py  admin.py  apps.py  asgi.py  celery.py  urls.py  wsgi.py
server/frontend/: index.html
server/templates/: 401.html  404.html  429.html  500.html  _base.html  profile.html
(+41 files in other folders)
